@@ -186,6 +186,8 @@ STDMETHODIMP_(void) CmadVRAllocatorPresenter::SetPosition(RECT w, RECT v)
     if (CComQIPtr<IVideoWindow> pVW = m_pDXR) {
         pVW->SetWindowPosition(w.left, w.top, w.right - w.left, w.bottom - w.top);
     }
+
+    SetVideoSize(GetVideoSize(), GetVideoSize(true));
 }
 
 STDMETHODIMP_(SIZE) CmadVRAllocatorPresenter::GetVideoSize(bool bCorrectAR) const
